[package]
name = "easy-memory-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.8", default-features = false, features = [
    "server",
    "macros",
    "transport-io",
    "base64",
] }
tokio = { version = "1", default-features = false, features = ["macros", "rt"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
schemars = "0.8"
anyhow = "1.0.100"
